--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             border: 10px solid black;
         }
         .image-container:hover {
-        background-image: url("WhatsApp Image 2023-10-07 at 1.10.09 AM.jpeg");
+        background-image: url("Portfolio-Project/WhatsApp Image 2023-10-07 at 1.10.09 AM.jpeg");
         }
 
         .square-list {
