--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <h1 style="text-align: center; padding-top: 10px;padding-bottom: 10px; background-color: black; color: white;">Contact Me</h1>
         <h2 style="margin-left: 10%;">My Contact Information:</h2>
         <div style="margin-left: 20%;">
-        <p class="contact" style="display: inline-block; margin-right: 30px;"><a href="mailto:hjkhan04@gmail.com" style="margin-left: 10%;"><img src="mail.png" height="70" width="70" alt="hjkhan04@gmail.com" title="hjkhan04@gmail.com" ></a>
+        <p class="contact" style="display: inline-block; margin-right: 30px;"><a href="mailto:hjkhan04@gmail.com" style="margin-left: 10%;"><img src="Portfolio-Project/mail.png" height="70" width="70" alt="hjkhan04@gmail.com" title="hjkhan04@gmail.com" ></a>
         <p class="contact" style="display: inline-block; margin-right: 20px;"><a href="https://www.linkedin.com/in/haris-jamal-16b873181/" target="_blank" style="margin-left: 10%;"><img src="linkedin.png" height="70" width="70" alt="LinkedIn" title="LinkedIn"></a>
         <p class="contact" style="display: inline-block; margin-right: 20px;"><a href="https://www.fiverr.com/pe/yGv6AZ" target="_blank" style="margin-left: 10%;"><img src="fiverr.png" height="70" width="70" alt="Fiverr" title="Fiverr"></a>
         <p class="contact" style="display: inline-block; margin-right: 20px;"><a href="https://www.upwork.com/freelancers/~018e02e53c112f8aa9" target="_blank" style="margin-left: 10%;"><img src="upwork.png" height="70" width="70" alt="Upwork" title="Upwork"></a>    
