--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                 </ul>
         </dl>
         <div style="text-align: left; padding: 20px; margin-left: 50px;">
-        <a href="MyResume.pdf" download><img src="download.png" height="40" width="40" alt="Download My Resume!" title="Download My Resume!" style="padding-right: 10px;"></a> <P style="inline-size: auto; display: inline-block;">Download my Resume!</P>
+        <a href="MyResume.pdf" download><img src="Portfolio-Project/download.png" height="40" width="40" alt="Download My Resume!" title="Download My Resume!" style="padding-right: 10px;"></a> <P style="inline-size: auto; display: inline-block;">Download my Resume!</P>
         </div>
     </section>
 
@@ -159,9 +159,9 @@
                         <dt><h3>Details:</h3></dt>
                         <dd><i><b>Technology Used:</b> Android Studio, Java</i></dd>
                             <dt><h3><u>Visual Elements:</u></h3></dt>
-                            <dd style="display: inline-block; margin-right: 20px; text-align: center;"><img src="mainscreen.jpeg" height="480" width="270" alt="Main" ></dd>
-                            <dd style="display: inline-block; margin-right: 20px; text-align: center;"><img src="game.jpeg" height="480" width="270" alt="GameScreen" ></dd>
-                            <dd style="display: inline-block; margin-right: 20px; text-align: center;"><img src="leaderboard.jpeg" height="480" width="270" alt="Leaderboard" ></dd>
+                            <dd style="display: inline-block; margin-right: 20px; text-align: center;"><img src="Portfolio-Project/mainscreen.jpeg" height="480" width="270" alt="Main" ></dd>
+                            <dd style="display: inline-block; margin-right: 20px; text-align: center;"><img src="Portfolio-Project/game.jpeg" height="480" width="270" alt="GameScreen" ></dd>
+                            <dd style="display: inline-block; margin-right: 20px; text-align: center;"><img src="Portfolio-Project/leaderboard.jpeg" height="480" width="270" alt="Leaderboard" ></dd>
 
                         
         </dl>
@@ -173,10 +173,10 @@
         <h2 style="margin-left: 10%;">My Contact Information:</h2>
         <div style="margin-left: 20%;">
         <p class="contact" style="display: inline-block; margin-right: 30px;"><a href="mailto:hjkhan04@gmail.com" style="margin-left: 10%;"><img src="Portfolio-Project/mail.png" height="70" width="70" alt="hjkhan04@gmail.com" title="hjkhan04@gmail.com" ></a>
-        <p class="contact" style="display: inline-block; margin-right: 20px;"><a href="https://www.linkedin.com/in/haris-jamal-16b873181/" target="_blank" style="margin-left: 10%;"><img src="linkedin.png" height="70" width="70" alt="LinkedIn" title="LinkedIn"></a>
-        <p class="contact" style="display: inline-block; margin-right: 20px;"><a href="https://www.fiverr.com/pe/yGv6AZ" target="_blank" style="margin-left: 10%;"><img src="fiverr.png" height="70" width="70" alt="Fiverr" title="Fiverr"></a>
-        <p class="contact" style="display: inline-block; margin-right: 20px;"><a href="https://www.upwork.com/freelancers/~018e02e53c112f8aa9" target="_blank" style="margin-left: 10%;"><img src="upwork.png" height="70" width="70" alt="Upwork" title="Upwork"></a>    
-        <p class="contact" style="display: inline-block;"><a href="https://github.com/HarisJamal28" target="_blank" style="margin-left: 10%;"><img src="github-mark.png" height="70" width="70"  alt="Github" title="Github"></a>    
+        <p class="contact" style="display: inline-block; margin-right: 20px;"><a href="https://www.linkedin.com/in/haris-jamal-16b873181/" target="_blank" style="margin-left: 10%;"><img src="Portfolio-Project/linkedin.png" height="70" width="70" alt="LinkedIn" title="LinkedIn"></a>
+        <p class="contact" style="display: inline-block; margin-right: 20px;"><a href="https://www.fiverr.com/pe/yGv6AZ" target="_blank" style="margin-left: 10%;"><img src="Portfolio-Project/fiverr.png" height="70" width="70" alt="Fiverr" title="Fiverr"></a>
+        <p class="contact" style="display: inline-block; margin-right: 20px;"><a href="https://www.upwork.com/freelancers/~018e02e53c112f8aa9" target="_blank" style="margin-left: 10%;"><img src="Portfolio-Project/upwork.png" height="70" width="70" alt="Upwork" title="Upwork"></a>    
+        <p class="contact" style="display: inline-block;"><a href="https://github.com/HarisJamal28" target="_blank" style="margin-left: 10%;"><img src="Portfolio-Project/github-mark.png" height="70" width="70"  alt="Github" title="Github"></a>    
         </div>
         <br>
             <form style="margin-left: 10%;" action="/submit" method="post">
