--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                 </ul>
         </dl>
         <div style="text-align: left; padding: 20px; margin-left: 50px;">
-        <a href="MyResume.pdf" download><img src="Portfolio-Project/download.png" height="40" width="40" alt="Download My Resume!" title="Download My Resume!" style="padding-right: 10px;"></a> <P style="inline-size: auto; display: inline-block;">Download my Resume!</P>
+        <a href="Portfolio-Project/MyResume.pdf" download><img src="Portfolio-Project/download.png" height="40" width="40" alt="Download My Resume!" title="Download My Resume!" style="padding-right: 10px;"></a> <P style="inline-size: auto; display: inline-block;">Download my Resume!</P>
         </div>
     </section>
 
