--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         .image-container {
             width: 350px;
             height: 380px;
-            background-image: url(".../Portfolio-Project/WhatsApp Image 2023-10-07 at 1.10.09 AM.jpeg");
+            background-image: url("Portfolio-Project/WhatsApp Image 2023-10-07 at 1.10.09 AM.jpeg");
             background-size: cover;
             position: relative;
             overflow: hidden;
@@ -18,7 +18,7 @@
             border: 10px solid black;
         }
         .image-container:hover {
-        background-image: url(".../Portfolio-Project/WhatsApp Image 2023-10-07 at 1.10.09 AM.jpeg");
+        background-image: url("Portfolio-Project/WhatsApp Image 2023-10-07 at 1.10.09 AM.jpeg");
         }
 
         .square-list {
