--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         .image-container {
             width: 350px;
             height: 380px;
-            background-image: url("Profile-Project/WhatsApp Image 2023-10-07 at 1.50.59 AM.jpeg");
+            background-image: url("Portfolio-Project/WhatsApp Image 2023-10-07 at 1.50.59 AM.jpeg");
             background-size: cover;
             position: relative;
             overflow: hidden;
@@ -18,7 +18,7 @@
             border: 10px solid black;
         }
         .image-container:hover {
-        background-image: url("Profile-Project/WhatsApp Image 2023-10-07 at 1.10.09 AM.jpeg");
+        background-image: url("Portfolio-Project/WhatsApp Image 2023-10-07 at 1.10.09 AM.jpeg");
         }
 
         .square-list {
@@ -148,7 +148,7 @@
                                 </ul>
         </dl>
         <div style="text-align: left; padding: 20px; margin-left: 50px;">
-        <a href="Profile-Project/MyResume.pdf" download><img src="Profile-Project/download.png" height="40" width="40" alt="Download My Resume!" title="Download My Resume!" style="padding-right: 10px;"></a> <P style="inline-size: auto; display: inline-block;">Download my Resume!</P>
+        <a href="Portfolio-Project/MyResume.pdf" download><img src="Portfolio-Project/download.png" height="40" width="40" alt="Download My Resume!" title="Download My Resume!" style="padding-right: 10px;"></a> <P style="inline-size: auto; display: inline-block;">Download my Resume!</P>
         </div>
     </section>
 
@@ -164,9 +164,9 @@
                         <dt><h3>Details:</h3></dt>
                         <dd><i><b>Technology Used:</b> Android Studio, Java</i></dd>
                             <dt><h3><u>Visual Elements:</u></h3></dt>
-                            <dd style="display: inline-block; margin-right: 20px; text-align: center;"><img src="Profile-Project/mainscreen.jpeg" height="480" width="270" alt="Main" ></dd>
-                            <dd style="display: inline-block; margin-right: 20px; text-align: center;"><img src="Profile-Project/game.jpeg" height="480" width="270" alt="GameScreen" ></dd>
-                            <dd style="display: inline-block; margin-right: 20px; text-align: center;"><img src="Profile-Project/leaderboard.jpeg" height="480" width="270" alt="Leaderboard" ></dd>
+                            <dd style="display: inline-block; margin-right: 20px; text-align: center;"><img src="Portfolio-Project/mainscreen.jpeg" height="480" width="270" alt="Main" ></dd>
+                            <dd style="display: inline-block; margin-right: 20px; text-align: center;"><img src="Portfolio-Project/game.jpeg" height="480" width="270" alt="GameScreen" ></dd>
+                            <dd style="display: inline-block; margin-right: 20px; text-align: center;"><img src="Portfolio-Project/leaderboard.jpeg" height="480" width="270" alt="Leaderboard" ></dd>
 
                         
         </dl>
@@ -177,11 +177,11 @@
         <h1 style="text-align: center; padding-top: 10px;padding-bottom: 10px; background-color: black; color: white;">Contact Me</h1>
         <h2 style="margin-left: 10%;">My Contact Information:</h2>
         <div style="margin-left: 20%;">
-        <p class="contact" style="display: inline-block; margin-right: 30px;"><a href="mailto:hjkhan04@gmail.com" style="margin-left: 10%;"><img src="Profile-Project/mail.png" height="70" width="70" alt="hjkhan04@gmail.com" title="hjkhan04@gmail.com" ></a>
-        <p class="contact" style="display: inline-block; margin-right: 20px;"><a href="https://www.linkedin.com/in/haris-jamal-16b873181/" target="_blank" style="margin-left: 10%;"><img src="Profile-Project/linkedin.png" height="70" width="70" alt="LinkedIn" title="LinkedIn"></a>
-        <p class="contact" style="display: inline-block; margin-right: 20px;"><a href="https://www.fiverr.com/pe/yGv6AZ" target="_blank" style="margin-left: 10%;"><img src="Profile-Project/fiverr.png" height="70" width="70" alt="Fiverr" title="Fiverr"></a>
-        <p class="contact" style="display: inline-block; margin-right: 20px;"><a href="https://www.upwork.com/freelancers/~018e02e53c112f8aa9" target="_blank" style="margin-left: 10%;"><img src="Profile-Project/upwork.png" height="70" width="70" alt="Upwork" title="Upwork"></a>    
-        <p class="contact" style="display: inline-block;"><a href="https://github.com/HarisJamal28" target="_blank" style="margin-left: 10%;"><img src="Profile-Project/github-mark.png" height="70" width="70"  alt="Github" title="Github"></a>    
+        <p class="contact" style="display: inline-block; margin-right: 30px;"><a href="mailto:hjkhan04@gmail.com" style="margin-left: 10%;"><img src="Portfolio-Project/mail.png" height="70" width="70" alt="hjkhan04@gmail.com" title="hjkhan04@gmail.com" ></a>
+        <p class="contact" style="display: inline-block; margin-right: 20px;"><a href="https://www.linkedin.com/in/haris-jamal-16b873181/" target="_blank" style="margin-left: 10%;"><img src="Portfolio-Project/linkedin.png" height="70" width="70" alt="LinkedIn" title="LinkedIn"></a>
+        <p class="contact" style="display: inline-block; margin-right: 20px;"><a href="https://www.fiverr.com/pe/yGv6AZ" target="_blank" style="margin-left: 10%;"><img src="Portfolio-Project/fiverr.png" height="70" width="70" alt="Fiverr" title="Fiverr"></a>
+        <p class="contact" style="display: inline-block; margin-right: 20px;"><a href="https://www.upwork.com/freelancers/~018e02e53c112f8aa9" target="_blank" style="margin-left: 10%;"><img src="Portfolio-Project/upwork.png" height="70" width="70" alt="Upwork" title="Upwork"></a>    
+        <p class="contact" style="display: inline-block;"><a href="https://github.com/HarisJamal28" target="_blank" style="margin-left: 10%;"><img src="Portfolio-Project/github-mark.png" height="70" width="70"  alt="Github" title="Github"></a>    
         </div>
         <br>
             <form style="margin-left: 10%;" action="/submit" method="post">
